# SudokuClassicMinLex

./: .gitignore  Cargo.toml  LICENSE  README.md  build-linux.sh  build-osx.sh  build.bat
package/: depth.py  example.py  test.py
src/: board.rs  lib.rs
