[package]
name = "sudoku-classic-minlex"
version = "0.1.1"
edition = "2024"
authors = ["David Clamage <rangsk@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudoku_classic_minlex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
rand = "0.9.1"

[dependencies.pyo3]
version = "0.24.2"
features = ["extension-module"]
